tests/specs/type_import_type.txt
# mod.ts
export function adopt<T>(p: import("./module.ts").Pet<T>) { }

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function adopt<T>(p: import("./module.ts").Pet<T>) { }
  | ^

# output.txt
Defined in file:///mod.ts:0:1

function adopt<T>(p: import("./module.ts").Pet<T>): void


# output.json
{
  "symbols": [
    {
      "name": "adopt",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "function",
          "def": {
            "params": [
              {
                "kind": "identifier",
                "name": "p",
                "optional": false,
                "tsType": {
                  "kind": "importType",
                  "value": {
                    "specifier": "./module.ts",
                    "qualifier": "Pet",
                    "typeParams": [
                      {
                        "repr": "T",
                        "kind": "typeRef",
                        "value": {
                          "typeName": "T",
                          "resolution": {
                            "kind": "typeParam",
                            "declaringName": "adopt",
                            "declaringKind": "function"
                          }
                        }
                      }
                    ]
                  }
                }
              }
            ],
            "returnType": {
              "repr": "void",
              "kind": "keyword",
              "value": "void"
            },
            "hasBody": true,
            "typeParams": [
              {
                "name": "T"
              }
            ]
          }
        }
      ]
    }
  ]
}
